@@ -2,20 +2,19 @@ package finergit;
 
 import java.nio.charset.StandardCharsets;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
-
 import org.eclipse.jgit.lib.Constants;
 import org.eclipse.jgit.lib.ObjectId;
 import org.eclipse.jgit.lib.Repository;
 import org.eclipse.jgit.revwalk.RevCommit;
-
 import finergit.ast.FinerJavaFileBuilder;
 import finergit.ast.FinerJavaModule;
 import finergit.rewrite.ConcurrentRepositoryRewriter;
 import finergit.rewrite.EntrySet;
-import finergit.rewrite.RefEntry;
 import finergit.rewrite.EntrySet.Entry;
 import finergit.rewrite.EntrySet.EntryList;
+import finergit.rewrite.RefEntry;
 import finergit.util.RevCommitUtil;
 
 public class FinerGitRewriter extends ConcurrentRepositoryRewriter {
@@ -26,7 +25,8 @@ public class FinerGitRewriter extends ConcurrentRepositoryRewriter {
 
   private final ObjectId head;
 
-  public FinerGitRewriter(final FinerGitConfig config, final Repository src, final Repository dst, final ObjectId head) {
+  public FinerGitRewriter(final FinerGitConfig config, final Repository src, final Repository dst,
+      final ObjectId head) {
     this.config = config;
     this.builder = new FinerJavaFileBuilder(config);
     this.head = head;
@@ -37,7 +37,7 @@ public class FinerGitRewriter extends ConcurrentRepositoryRewriter {
 
   @Override
   protected Collection<ObjectId> collectStarts() {
-    return List.of(head);
+    return Collections.singletonList(head);
   }
 
   public static final String MASTER = Constants.R_HEADS + "master";
